<resources>
    <string name="app_name">SHIELDbook</string>
    <string name="enter_email_here">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="login">LOGIN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="enter_name">Enter Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_email">Enter email</string>
    <string name="send_link">Send Link</string>
    <string name="reset_password">Reset password:</string>
</resources>