<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".forgotPass_activity">

    <ImageView
        android:id="@+id/shield_logo"
        android:layout_width="319dp"
        android:layout_height="320dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/shield"
        app:layout_constraintBottom_toTopOf="@+id/forgot_pass_enter_email_textBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.132" />

    <TextView
        android:id="@+id/forgot_pass_enter_email_textBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/reset_password"
        android:textColor="@color/black"
        android:textAlignment="textStart"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/forgot_pass_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.179"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/forgot_pass_email"
        android:layout_width="301dp"
        android:layout_height="44dp"
        android:layout_marginBottom="216dp"
        android:ems="10"
        android:hint="@string/enter_email_here"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.409"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/send_link"
        android:layout_width="153dp"
        android:layout_height="42dp"
        android:layout_marginTop="76dp"
        android:background="@drawable/btn"
        android:text="@string/send_link"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgot_pass_email"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>